# Expenditure-manager

./: .gitignore  AddExpenditureWidget.qml  AllListWidget.qml  CMakeLists.txt  CreateCategory.qml  ExpenditureList.qml  ListPresentationCard.qml  Main.qml  MainPage.qml  MessageDisplayer.qml  README.md  Temp.qml  calendar.cpp  calendar.h  custom_db.cpp  db_setup.sh  main.cpp  tst_testcasenum1.qml
Database/: data_test.sql  database
database/: data_test.sql  database
dev/include/: custom_db.h
dev/src/: custom_db.cpp  main.cpp
qml/: AddExpenditureWidget.qml  AllListWidget.qml  ChartPage.qml  ExpenditureList.qml  ListPresentationCard.qml  Main.qml  MainPage.qml  MessageDisplayer.qml  NewAddExpenditureWidget.qml
qml/Form/: ChooseCategoryWidget.qml  ChooseDateWidget.qml  ChooseNameWidget.qml  ChooseNumberWidget.qml
test/: test_custom_db.cpp
